@@ -156,6 +156,7 @@
 						--add-opens java.base/java.lang=ALL-UNNAMED
 						--add-opens java.base/java.lang.reflect=ALL-UNNAMED
 						--add-opens java.base/java.util=ALL-UNNAMED
+						-XX:+EnableDynamicAgentLoading
 					</argLine>
 				</configuration>
 			</plugin>
